# ClassHub

./: .env.example  .gitignore  README.md  electron-builder.yml  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
courses/crypto-101/: course.json
courses/crypto-101/assets/: lesson.css
courses/crypto-101/content/m02-wallets/: module-quiz.json
courses/crypto-101/extras/glossary/: index.html
courses/crypto-101/extras/links/: links.json
courses/crypto-101/instructor/: dashboard.html
courses/crypto-101/instructor/notes/: l01-hot-vs-cold.md  l01-what-is-crypto.md  l02-blockchain-basics.md
docs/: api.md  course-bundle-spec.md
scripts/: package-demo-course.js  web-server.ts
server/python/: pyproject.toml
server/python/classhub_server/: __init__.py  main.py
src/main/: admin-router.ts  api-router.ts  bundle-service.ts  data-store.ts  env.ts  index.ts  lab-service.ts  menu.ts  paths.ts  progress-service.ts
src/main/db/: admin-data.ts  migrate.ts  pool.ts  users.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  env.d.ts  main.tsx
src/renderer/src/assets/: main.css
src/renderer/src/components/: AdminDashboardMenu.tsx  AppHeader.tsx  AppLayout.tsx  ConfirmModal.tsx  CourseCard.tsx  CourseHeader.tsx  CourseSidebar.tsx  ExportCourseModal.tsx  HelpModal.tsx  ImportCourseMenu.tsx  LessonViewer.tsx  LoginModal.tsx  PasswordField.tsx  ProfileModal.tsx  QuizPanel.tsx  RoleViewsMenu.tsx
src/renderer/src/hooks/: useCourseImage.ts
src/renderer/src/i18n/: index.ts
src/shared/: api.ts  schemas.ts  types.ts
(+35 files in other folders)
